--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
     </section>
 
       <figure class="wide-figure">
-        <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
+        <figure aria-label="Composite image from the Draw-Aloud Symptom/s project. The project engaged diverse participants in community settings using a Draw-Aloud protocol to map past, present, and future health experiences through drawing and reflection. Insights were analyzed using the ELITO method, resulting in four technology personas—Bat, Dog, Health Altar, and Butterfly—that now inform future service design blueprints and workshops.">
+        <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Composite image showing participant drawings, sticky notes, and visual coding from the Draw-Aloud Symptom/s project." />
         <figcaption>
         A glimpse into “Draw-Aloud Symptom/s”—an art × service design thesis grounded in critical ethnography. The project engaged diverse participants in community settings using the Draw-Aloud protocol to map past, present, and future health experiences through drawing and reflection.
         Using the ELITO method, participant insights were translated into four technology personas—Bat, Dog, Health Altar, and Butterfly—each representing a unique relationship to health data and care. These personas now inform future blueprints and inclusive service design workshops.
