--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <li>🦋 <strong>Butterfly</strong> – Hope, visualization</li>
           </ul>
           <p>These metaphors now guide inclusive service design and Draw-Aloud–based workshops.</p>
-          <p> •	Multimodal reflection | •	Inclusive infrastructure | •	Patient-centered data practices </p>
+          <li>Multimodal reflection | Inclusive infrastructure | Patient-centered data practices</li> 
         </div>
     
       </div>
