--- a/index.html
+++ b/index.html
@@ -130,12 +130,17 @@
         <!-- Panel 2: Draw-Aloud Protocol in Action -->
         <div class="project">
           <h3>🖌️ Draw-Aloud Protocol in Action</h3>
-          <p>In familiar, community-based settings, participants mapped their health journeys across three time landmarks—<strong>past</strong>, <strong>present</strong>, and <strong>future</strong>—through live sketching and reflection. These visual timelines became expressive, multimodal health records.</p>
           <p>
-            Each session began with a grounding exercise to honor the emotional vulnerability of illness storytelling. Sessions were held in person or remotely, with drawing kits mailed or dropped off and virtual facilitation provided during COVID.
+            In familiar, community-based settings, participants mapped their health journeys across three time landmarks—<strong>past</strong>, <strong>present</strong>, and <strong>future</strong>—through live sketching and spoken reflection. These visual timelines became expressive, multimodal health records.
           </p>
-          <p>To support interpretability by future healthcare providers, we adopted a <strong>“Patient Explanation Model”</strong>,  allowing participants to annotate their drawings with short descriptions or keywords in their own words.</p>
-        </div>
+          <p>
+            The Draw-Aloud protocol is a <strong>guided procedure</strong> designed to support emotional safety and narrative expression. It was facilitated either <strong>live in person</strong> or <strong>via virtual platforms</strong>. A self-directed version was also developed as a <strong>photo-mailback kit</strong>, enabling participants to engage independently while following a structured, reflective flow.
+          </p>
+          <p>
+            Each session or kit began with a grounding exercise to honor the emotional vulnerability of illness storytelling. To support interpretability by future healthcare providers, we adopted a <strong>“Patient Explanation Model”</strong>, allowing participants to annotate their drawings with short descriptions or keywords in their own words.
+          </p>
+
+       </div>
     
         <!-- Panel 3: Personas & Design Impact -->
         <div class="project">
