--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 
 
     <section id="dual-track">
-      <h2>🖍️ Art Meets Health Data -- "Draw-Aloud Symptom/s: <p>
-      <<p><i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency</i></h2>
+      <h2>🖍️ Art Meets Health Data -- "Draw-Aloud Symptom/s:
+      <<p>    <i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency</i></h2>
       <div class="project-grid">
     
         <!-- Panel 1: Method & Intent -->
@@ -144,7 +144,7 @@
     
         <!-- Panel 3: Personas & Design Impact -->
         <div class="project">
-          <h3>🔎 Personas & Design Impact</h3>
+          <h3>🔎 Agentic Technology Personas & Design Impact</h3>
           <p>Through iterative loops of analysis-to-design using the ELITO method, four technology personas emerged, each reflecting a unique relationship to health data and care:</p>
           <ul>
             <li>🦇 <strong>Bat</strong> – Sonification, distance from metrics</li>
