--- a/index.html
+++ b/index.html
@@ -145,18 +145,24 @@
         <!-- Panel 3: Personas & Design Impact -->
         <div class="project">
           <h3>🔎 Agentic Technology Personas & Design Impact</h3>
-          <p>Through iterative loops of analysis-to-design using the ELITO method, four technology personas emerged, each reflecting a unique relationship to health data and care:</p>
+          <p>
+            Technology is often framed as a neutral tool—but this project challenges that notion. Through iterative analysis-to-design loops using the ELITO method, we surfaced four <strong>agentic technology personas</strong> that reflect how people relate to health data not just functionally, but emotionally, symbolically, and ritually.
+          </p>
           <ul>
             <li>🦇 <strong>Bat</strong> – Sonification, distance from metrics</li>
             <li>🐕 <strong>Dog</strong> – Ownership, portability</li>
             <li>🛕 <strong>Health Altar</strong> – Ritual, self-body scale</li>
             <li>🦋 <strong>Butterfly</strong> – Hope, visualization</li>
           </ul>
-          <p>These metaphors now guide inclusive service design and Draw-Aloud–based workshops.</p>
-          <li>Multimodal reflection | Inclusive infrastructure | Patient-centered data practices</li> 
+          <p>
+            These metaphors move beyond the idea of technology as a passive or purely clinical interface. They now guide inclusive service design and Draw-Aloud–based workshops, helping teams imagine future systems that are relational, multimodal, and grounded in lived experience.
+          </p>
+          <ul>
+            <li>Multimodal reflection</li>
+            <li>Inclusive infrastructure</li>
+            <li>Patient-centered data practices</li>
+          </ul>
         </div>
-    
-      </div>
     </section>
 
       <figure class="wide-figure">
