--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section id="dual-track">
       <h2>🖍️ Art Meets Health Data -- "Draw-Aloud Symptom/s:
-      <<p>    <i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency</i></h2>
+      <p>    <i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency</i></h2>
       <div class="project-grid">
     
         <!-- Panel 1: Method & Intent -->
