--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
             <li><strong>Tools:</strong> Drawing kits, <em>Draw-Aloud Protocol</em>, ELITO sticky-note mapping</li>
             <li><strong>Focus:</strong> Patient-centred Data Story, agency, design justice, inclusive infrastructure</li>
           </ul>
-        </div>
+          <p>
+          This work is part of my Master’s thesis in Design Research within the School of Interactive Arts and Technology at Simon Fraser University (SFU).  
+            <a href="https://summit.sfu.ca/item/37921" class="button glow-ink">Read Ann's MSc Thesis on SFU Summit→</a>
+           </div>
     
         <!-- Panel 2: Draw-Aloud Protocol in Action -->
         <div class="project">
