--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -28,6 +28,7 @@
     <a href="index.html">Home 🏠</a>
     <a href="artist_bio.html">Bio 🧬</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
+    <a href="workshops.html">Workshops 🎨</a>
     <a href="https://annreflection.square.site/">ArtShop 👜</a>
   
     <!-- Dark mode toggle button -->
