--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <a href="https://linkedin.com/in/annkchou" class="linkedin"><i class="fa fa-linkedin"></i></a>
     <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
     <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
+    <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
   </div>
 
   <main class="main" style="padding: 2rem">
