--- a/workshops.html
+++ b/workshops.html
@@ -32,6 +32,7 @@
   <a href="https://linkedin.com/in/annkchou" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
   <a href="https://www.youtube.com/@annchou9171" aria-label="YouTube"><i class="fa fa-youtube"></i></a>
   <a href="https://www.flickr.com/photos/annchou/" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
+  <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
 </div>
 
 <!-- ✅ HERO SECTION -->
