--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <section id="dual-track">
       <h2>🖍️ Art Meets Health Data -- "Draw-Aloud Symptom/s:
-      <p>    <i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency</i></h2>
+      <p>    <i>Critical Ethnographic Design of Participant Personal Health Records for Patient Agency" </i></h2>
       <div class="project-grid">
     
         <!-- Panel 1: Method & Intent -->
@@ -127,7 +127,7 @@
             <li><strong>Focus:</strong> Patient-centred Data Story, agency, design justice, inclusive infrastructure</li>
           </ul>
           <p>
-          This work is part of my Master’s thesis in Design Research within the School of Interactive Arts and Technology at Simon Fraser University (SFU).  
+          This work is part of my Master’s thesis in EHR Design Research within the School of Interactive Arts and Technology at Simon Fraser University (SFU).  
             <a href="https://summit.sfu.ca/item/37921" class="button glow-ink">Read Ann's MSc Thesis on SFU Summit→</a>
            </div>
     
