--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@
           </figure>
         </div>
 
+        <div class="project">
+          <h3>Access-Centered UX Scorecard (2024)</h3>
+          <p>Designed for public sector teams without direct user testing capacity, this lightweight scorecard enables more inclusive UX evaluations. Developed independently, it combines behavioral frameworks with inclusive design literature to guide equitable assessments.</p>
+          <figure>
+            <img src="rss/access_centered_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
+            <figcaption>
+              UX evaluation tool built to help public service teams internalize access as a quality, not a checkbox. Features an interpretive grading scale, persona-grounded prompts, and metrics focused on comprehension, task success, and emotional burden.
+            </figcaption>
+          </figure>
+        </div>
+
+
     </section>
 
     <section id="connect">
