--- a/index.html
+++ b/index.html
@@ -90,12 +90,7 @@
           <a href="Eco_illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
         </div>
         <div class="project">
-          <h3>Sumi-e & Shoebox Stages</h3>
-          <p>Workshops blending ink brush play with hands-on design for accessibility and delight.</p>
-          <a href="workshops.html" class="button glow-ink">See Workshops Offering</a>
-          Let’s chat – annreflection at gmail dot com
-        </div>
-      </div>
+
     </section>
 
     <section id="about">
@@ -209,7 +204,7 @@
           <h3>Access-Centered UX Scorecard (2024)</h3>
           <p>Designed for public sector teams without direct user testing capacity, this lightweight scorecard enables more inclusive UX evaluations. Developed independently, it combines behavioral frameworks with inclusive design literature to guide equitable assessments.</p>
           <figure>
-            <img src="rss/access_centered_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
+            <img src="rss/ux_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
             <figcaption>
               UX evaluation tool built to help public service teams internalize access as a quality, not a checkbox. Features an interpretive grading scale, persona-grounded prompts, and metrics focused on comprehension, task success, and emotional burden.
             </figcaption>
