--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
           <a href="Eco_illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
         </div>
         <div class="project">
+          <h3>Sumi-e, Shoebox Stages, Sock Puppets & Lantern Making</h3>
+          <p>Intergenerational workshops designed for accessibility and delight. Participants explore traditional ink brush techniques (sumi-e), build tactile shoebox stages, co-create expressive sock puppets, and craft lanterns to illuminate stories of gender fluidity, emotional nuance, and creative access.</p>
+          <figure>
+            <img src="rss/workshop_sm.png" alt="Left: Sock puppet held on stage; Right: Candlelit sumi-e painting glowing with fluid brushstrokes." />
+            <figcaption>
+              A multi-sensory, accessibility-centered format where participants play with ink, light, and storytelling. Candlelit sumi-e evokes reflection, while puppet stages foster expression across intersectional and neurodiverse identities.
+            </figcaption>
+          </figure>
+          <a href="workshops.html" class="button glow-ink">See Workshops Offering</a>
+          <p style="margin-top: 0.5em;">Let’s chat – annreflection at gmail dot com</p>
+        </div>
+
 
     </section>
 
@@ -115,7 +127,7 @@
         <!-- Panel 1: Method & Intent -->
         <div class="project">
           <h3>🎯 Method & Intent</h3>
-          <p>This Master's Thesis project reimagines electronic health records (EHRs) as shared spaces—not just clinical data, but co-authored stories. It centers patient agency and embodied knowledge beyond lab results.</p>
+          <p>This Master's Thesis project (2020-2023) reimagines electronic health records (EHRs) as shared spaces—not just clinical data, but co-authored stories. It centers patient agency and embodied knowledge beyond lab results.</p>
           <ul>
             <li><strong>Method:</strong> Critical ethnography + illustrated dialogue + community engaged research</li>
             <li><strong>Tools:</strong> Drawing kits, <em>Draw-Aloud Protocol</em>, ELITO sticky-note mapping</li>
@@ -180,7 +192,7 @@
       <h2>AI & Service Design Portfolio</h2>
       <div class="project-grid clearfix">
         <div class="project">
-          <h3>AF Discovery  (AI4Good Internship project)</h3>
+          <h3>AF Discovery  (AI4Good Internship project 2023)</h3>
           <p>An AI-assisted ultrasound image analysis system co-developed to estimate fetal head circumference. Combines UNET segmentation with Random Forest regression to support low-resource maternal care.</p>
           <a href="https://github.com/AnnChou/AF_Discovery" target="_blank" class="cta glow">See our code on GitHub: AF_Discovery</a>
           <figure>
@@ -190,7 +202,7 @@
         </div>
     
         <div class="project">
-          <h3>Guide & Service Dog Accessibility Poster</h3>
+          <h3>Guide & Service Dog Accessibility Poster (2025)</h3>
           <p>Behavioral-insight–informed poster design to welcome neurodivergent individuals with service animals. Started from a CoPilot AI prompt and refined through visual/textual research on signage and stigma.</p>
           <figure>
             <img src="rss/service_dog_poster.png" alt="Illustrated poster showing a person with a guide dog entering a building, dog alert and focused." />
@@ -201,7 +213,7 @@
         </div>
 
         <div class="project">
-          <h3>Access-Centered UX Scorecard (2024)</h3>
+          <h3>Access-Centered UX Scorecard (2025)</h3>
           <p>Designed for public sector teams without direct user testing capacity, this lightweight scorecard enables more inclusive UX evaluations. Developed independently, it combines behavioral frameworks with inclusive design literature to guide equitable assessments.</p>
           <figure>
             <img src="rss/ux_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
