--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
               Accessibility poster developed to support awareness of the Guide and Service Dog Act. Uses behavioral insight and inclusive visuals to affirm entry rights and reduce social friction for neurodivergent individuals accompanied by working animals.
             </figcaption>
           </figure>
+          <a href="https://github.com/AnnChou/creative-access-guide#-servie--guide-dog-welcome-poster" target="_blank" class="button-ghost glow-green">🦮 View the Service & Guide Dog Poster</a>
         </div>
 
         <div class="project">
