--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="project">
           <h3>AF Discovery  (AI4Good Internship project 2023)</h3>
           <p>An AI-assisted ultrasound image analysis system co-developed to estimate fetal head circumference. Combines UNET segmentation with Random Forest regression to support low-resource maternal care.</p>
-          <a href="https://github.com/AnnChou/AF_Discovery" target="_blank" class="cta glow">See our code on GitHub: AF_Discovery</a>
+          <a href="https://github.com/AnnChou/AF_Discovery" target="_blank" class="button glow-ink">See our code on GitHub: AF_Discovery</a>
           <figure>
             <img src="rss/AF_discovery_AI4Good.jpg" alt="AI4Good project diagram showing model segmentation and head circumference prediction from ultrasound." />
             <figcaption>AI4Good: Segmentation and regression pipeline for fetal biometrics.</figcaption>
@@ -216,6 +216,8 @@
         <div class="project">
           <h3>Access-Centered UX Scorecard (2025)</h3>
           <p>Designed for public sector teams without direct user testing capacity, this lightweight scorecard enables more inclusive UX evaluations. Developed independently, it combines behavioral frameworks with inclusive design literature to guide equitable assessments.</p>
+           <a href="https://github.com/AnnChou/creative-access-guide/blob/main/UX_Scorecard/UX_Scorecard_overview.md" target="_blank" class="cta glow"> 📊 View UX Scorecard Overview</a>
+
           <figure>
             <img src="rss/ux_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
             <figcaption>
