--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="project">
           <h3>Access-Centered UX Scorecard (2025)</h3>
           <p>Designed for public sector teams without direct user testing capacity, this lightweight scorecard enables more inclusive UX evaluations. Developed independently, it combines behavioral frameworks with inclusive design literature to guide equitable assessments.</p>
-           <a href="https://github.com/AnnChou/creative-access-guide/blob/main/UX_Scorecard/UX_Scorecard_overview.md" target="_blank" class="cta glow"> 📊 View UX Scorecard Overview</a>
+           <a href="https://github.com/AnnChou/creative-access-guide/blob/main/UX_Scorecard/UX_Scorecard_overview.md" target="_blank" class="cta glow"> 🧮 View UX Scorecard Overview</a>
 
           <figure>
             <img src="rss/ux_scorecard.png" alt="UX scorecard interface with dimensions, grading scale, and persona prompts shown on-screen." />
