--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <link rel="stylesheet" href="css/style_resp.css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHX8G8JN6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHX8G8JN6Y');
+</script>
+  
 <body>
   <header>
     <div class="topnav" id="myTopnav">
