--- a/workshops.html
+++ b/workshops.html
@@ -7,6 +7,17 @@
   <meta name="keywords" content="lantern workshop, shadow play, art jam, sumi-e, Chinese brush painting, puppet making, community mural, textile banners, Ann Chou, Annreflection Studio, Victoria artist, Vancouver workshops, disability art, inclusive art" />
   <link rel="stylesheet" href="css/style_resp.css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHX8G8JN6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHX8G8JN6Y');
+</script>
+  
 <body>
 
 <header>
