--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:url" content="https://annchou.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- <link rel="stylesheet" href="css/style_resp.css" /> -->
-  <link rel="stylesheet" href="css/master.css" />
+  <link rel="stylesheet" href="css/style_resp.css" />
+ <!-- <link rel="stylesheet" href="css/master.css" />-->
   <script src="scripts/main.js"></script>
   <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   <script src="scripts/social-widgets.js"></script>
