--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="css/style_resp.css" />
  <!-- <link rel="stylesheet" href="css/master.css" />-->
   <script src="scripts/main.js"></script>
-  <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   <script src="scripts/social-widgets.js"></script>
 
   
@@ -67,6 +66,10 @@
     <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
     <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
+      <!-- 🌙 Floating Dark Mode Toggle -->
+    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode">
+      <span class="toggle-icon">🌙</span>
+    </button>
   </div>
 
   <main class="main" style="padding: 2rem">
@@ -322,4 +325,5 @@
   </footer>
   
 </body>
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
 </html>
