--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_resp.css" />
+  <link rel="stylesheet" href="css/effects-assistive-mode.css" />
  <!-- <link rel="stylesheet" href="css/master.css" />-->
   <script src="scripts/main.js"></script>
   <script src="scripts/social-widgets.js"></script>
@@ -66,10 +67,16 @@
     <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
     <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
-      <!-- 🌙 Floating Dark Mode Toggle -->
-    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode">
-      <span class="toggle-icon">🌙</span>
-    </button>
+      <!-- 🌙 Floating Dark + Assistive Toggle -->
+    <div class="floating-toggle-stack">
+      <button id="darkModeToggleIconBar" aria-label="Toggle dark mode">
+        <span class="toggle-icon">🌙</span>
+      </button>
+      <button id="assistiveToggle" aria-label="Toggle assistive contrast">
+        <span class="assistive-icon">🖍️</span>
+      </button>
+    </div>
+
   </div>
 
   <main class="main" style="padding: 2rem">
