--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_resp.css" />
   <link rel="stylesheet" href="css/effects-assistive-mode.css" />
+  <link rel="stylesheet" href="css/dark.css" />
  <!-- <link rel="stylesheet" href="css/master.css" />-->
   <script src="scripts/main.js"></script>
   <script src="scripts/social-widgets.js"></script>
