--- a/index.html
+++ b/index.html
@@ -380,6 +380,49 @@
     document.body.classList.toggle('dark-mode');
     localStorage.setItem('mode', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
   }
+
+/* 📂 ACCORDION + EMOJI TOGGLE */
+function setupAccordion() {
+  document.querySelectorAll('.accordion-toggle').forEach(button => {
+    const content = button.nextElementSibling;
+    if (!content) return;
+
+    content.style.maxHeight = '0px';
+    content.style.overflow = 'hidden';
+    content.style.transition = 'max-height 0.5s ease';
+
+    const label = button.dataset.label || '';
+
+    button.textContent = `🔻 ${label}`;
+    button.setAttribute('aria-expanded', false);
+
+    button.addEventListener('click', () => {
+      const isOpen = button.classList.toggle('active');
+      content.style.maxHeight = isOpen ? content.scrollHeight + 'px' : '0px';
+      button.textContent = isOpen ? `🔺 ${label}` : `🔻 ${label}`;
+      button.setAttribute('aria-expanded', isOpen);
+    });
+  });
+}
+
+/* 📱 MOBILE NAVIGATION */
+function toggleMobileNav() {
+  const nav = document.getElementById("myTopnav");
+  nav.classList.toggle("responsive");
+}
+
+/* 🔁 LOAD PREFERENCES & INIT UI */
+window.addEventListener('DOMContentLoaded', () => {
+  const savedDark = localStorage.getItem('darkMode');
+  const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+  applyDarkState(savedDark ?? (prefersDark ? 'enabled' : 'disabled'));
+
+  const savedAssistive = localStorage.getItem('effectAssistiveMode');
+  const assistiveActive = savedAssistive === 'enabled';
+  applyAssistiveState(assistiveActive ? 'enabled' : 'disabled');
+
+  setupAccordion();
+});
 </script>
 
 <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
