--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="artist_bio.html">Bio 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
-      <a href="https://annreflection.square.site/">ArtShop 👜</a>
+      <a href="https://annreflection.square.site/">ArtShop & Tiny Art 👜 👜</a>
 
       <!-- 🌙 Dark mode toggle button problem
      <div class="top-toggle-stack">
@@ -337,6 +337,21 @@
         <a href="https://ko-fi.com/annreflection/commissions" class="button-ghost glow-green">Tiny Art, Big Heart 💌 </a>
       </div>
     </section>
+
+      <section id="support">
+      <h2>Support My Practice</h2>
+      <p>
+        You can explore one-of-a-kind works, lantern sketches, and small sensory objects via my 
+        <a href="https://annreflection.square.site/">Art Shop</a> and 
+        <a href="https://ko-fi.com/annreflection">Ko-fi Page</a>. 
+        While I’m still refining shipping options, these platforms help sustain accessible arts research and inclusive workshops.
+      </p>
+      <div class="button-group">
+        <a href="https://annreflection.square.site/" class="button glow">👜 Visit Art Shop</a>
+        <a href="https://ko-fi.com/annreflection" class="button-ghost glow-green">✨ Tiny Art & Support</a>
+      </div>
+</section>
+
   </main>
 
   <footer>
@@ -419,7 +434,7 @@
 
 
 
-<button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+
 <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   
 </body>
