--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="artist_bio.html">Bio 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
-      <a href="https://annreflection.square.site/">ArtShop & Tiny Art 👜 👜</a>
+      <a href="https://annreflection.square.site/">ArtShop & Tiny Art  👜</a>
 
       <!-- 🌙 Dark mode toggle button problem
      <div class="top-toggle-stack">
