--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
       <a href="artist_bio.html">Bio 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
-      <a href="https://annreflection.square.site/">ArtShop & Tiny Art  👜</a>
+      <div class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Shop 👜</a>
+        <div class="dropdown-content">
+          <a href="https://annreflectionarts.square.site/">Cards & Items</a>
+          <a href="https://annreflection.square.site/">Original Paintings</a>
+        </div>
+      </div>
+
 
       <!-- 🌙 Dark mode toggle button problem
      <div class="top-toggle-stack">
@@ -338,19 +345,24 @@
       </div>
     </section>
 
-      <section id="support">
+    <section id="support">
       <h2>Support My Practice</h2>
       <p>
-        You can explore one-of-a-kind works, lantern sketches, and small sensory objects via my 
-        <a href="https://annreflection.square.site/">Art Shop</a> and 
-        <a href="https://ko-fi.com/annreflection">Ko-fi Page</a>. 
+        You can browse lantern sketches, sumi-e cards, and sensory objects in my 
+        <a href="https://annreflectionarts.square.site/">Art Shop</a>.
+        Looking for one-of-a-kind plein-air or large sumi-e work? Visit the 
+        <a href="https://annreflection.square.site/">Originals Gallery</a>.
+        Or support small works and donations through 
+        <a href="https://ko-fi.com/annreflection">Ko-fi</a>.
+      </p>
+      <p>
         While I’m still refining shipping options, these platforms help sustain accessible arts research and inclusive workshops.
       </p>
       <div class="button-group">
-        <a href="https://annreflection.square.site/" class="button glow">👜 Visit Art Shop</a>
+        <a href="https://annreflectionarts.square.site/" class="button glow">👜 Visit Art Shop</a>
         <a href="https://ko-fi.com/annreflection" class="button-ghost glow-green">✨ Tiny Art & Support</a>
       </div>
-</section>
+    </section>
 
   </main>
 
